MODLD-395: distinguish request & response DTOs (#277)
* MODLD-395: distinguish request & response DTOs