@@ -8,12 +8,13 @@ import static org.folio.ld.dictionary.PropertyDictionary.LANGUAGE_NOTE;
 import static org.folio.ld.dictionary.PropertyDictionary.NOTE;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.WORK;
 
-import java.util.Collections;
 import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import org.folio.ld.dictionary.PropertyDictionary;
-import org.folio.linked.data.domain.dto.Instance;
-import org.folio.linked.data.domain.dto.WorkReference;
+import org.folio.linked.data.domain.dto.IdField;
+import org.folio.linked.data.domain.dto.InstanceRequest;
+import org.folio.linked.data.domain.dto.InstanceResponse;
+import org.folio.linked.data.domain.dto.WorkResponse;
 import org.folio.linked.data.exception.NotFoundException;
 import org.folio.linked.data.exception.ValidationException;
 import org.folio.linked.data.mapper.dto.common.CoreMapper;
@@ -26,10 +27,13 @@ import org.springframework.stereotype.Component;
 
 @Component
 @RequiredArgsConstructor
-@MapperUnit(type = WORK, predicate = INSTANTIATES, dtoClass = WorkReference.class)
+@MapperUnit(type = WORK, predicate = INSTANTIATES, requestDto = IdField.class)
 public class WorkReferenceMapperUnit implements SingleResourceMapperUnit {
 
-  private static final Set<Class<?>> SUPPORTED_PARENTS = Collections.singleton(Instance.class);
+  private static final Set<Class<?>> SUPPORTED_PARENTS = Set.of(
+    InstanceRequest.class,
+    InstanceResponse.class
+  );
   private static final Set<PropertyDictionary> SUPPORTED_NOTES = Set.of(BIBLIOGRAPHY_NOTE, LANGUAGE_NOTE, NOTE);
 
   private final CoreMapper coreMapper;
@@ -38,21 +42,21 @@ public class WorkReferenceMapperUnit implements SingleResourceMapperUnit {
 
   @Override
   public <P> P toDto(Resource source, P parentDto, Resource parentResource) {
-    if (parentDto instanceof Instance instance) {
-      var workReference = coreMapper.toDtoWithEdges(source, WorkReference.class, false);
-      workReference.setId(String.valueOf(source.getId()));
-      ofNullable(source.getDoc()).ifPresent(doc -> workReference.setNotes(noteMapper.toNotes(doc, SUPPORTED_NOTES)));
-      instance.addWorkReferenceItem(workReference);
+    if (parentDto instanceof InstanceResponse instance) {
+      var workResponse = coreMapper.toDtoWithEdges(source, WorkResponse.class, false);
+      workResponse.setId(String.valueOf(source.getId()));
+      ofNullable(source.getDoc()).ifPresent(doc -> workResponse.setNotes(noteMapper.toNotes(doc, SUPPORTED_NOTES)));
+      instance.addWorkReferenceItem(workResponse);
     }
     return parentDto;
   }
 
   @Override
   public Resource toEntity(Object dto, Resource parentEntity) {
-    var work = (WorkReference) dto;
-    if (nonNull(work.getId())) {
-      return resourceRepository.findById(Long.parseLong(work.getId()))
-        .orElseThrow(() -> new NotFoundException("Work with id [" + work.getId() + "] is not found"));
+    var workIdField = (IdField) dto;
+    if (nonNull(workIdField.getId())) {
+      return resourceRepository.findById(Long.parseLong(workIdField.getId()))
+        .orElseThrow(() -> new NotFoundException("Work with id [" + workIdField.getId() + "] is not found"));
     } else {
       throw new ValidationException("WorkReference id", "null");
     }
